# mr-mcp

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  manifest.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
data/: responses.csv
src/: server.ts
src/mcp_server/: __init__.py  tools.py
src/public/: index.html
src/tools/: analyze_data.ts  generate_infographic.ts  index.ts  list_files.ts  parse_csv.ts  ping.ts  read_file.ts  write_file.ts
tests/: server.test.ts  test_mcp_server.py  test_tools.py  tools.test.ts
