[project]
name = "mcp-server"
version = "0.1.0"
description = "FastAPI server exposing an OpenAI-compatible interface backed by Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
